--- a/angular.json
+++ b/angular.json
@@ -26,8 +26,7 @@
             "styles": [
               "src/styles.css",
               "src/assets/plugins/bootstrap/css/bootstrap.min.css",
-              "src/assets/css/style.css",
-              "src/assets/css/colors/default-dark.css"
+              "src/assets/css/style.css"
             ],
             "scripts": [
               "src/assets/plugins/jquery/jquery.min.js",
@@ -104,8 +103,7 @@
             "styles": [
               "src/styles.css",
               "src/assets/plugins/bootstrap/css/bootstrap.min.css",
-              "src/assets/css/style.css",
-              "src/assets/css/colors/default-dark.css"
+              "src/assets/css/style.css"
             ],
             "scripts": [
               "src/assets/plugins/jquery/jquery.min.js",
